syntax = "proto3";
package core.protos.playbooks;

import "google/protobuf/wrappers.proto";


message Cloudwatch {
  message EcsListClusters {
    // No parameters needed for listing all clusters
  }
  
  message EcsListTasks {
    google.protobuf.StringValue cluster_name = 1;
  }
  
  message EcsGetTaskLogs {
    google.protobuf.StringValue cluster_name = 1;
    google.protobuf.StringValue task_definition = 2;
    google.protobuf.Int64Value max_lines = 3;
  }
  message MetricExecution {
    message Dimension {
      google.protobuf.StringValue name = 1;
      google.protobuf.StringValue value = 2;
    }
    google.protobuf.StringValue namespace = 1;
    google.protobuf.StringValue region = 2;
    google.protobuf.StringValue metric_name = 3;
    repeated Dimension dimensions = 4;
    google.protobuf.StringValue statistic = 5;
    repeated uint32 timeseries_offsets = 6;
    google.protobuf.UInt64Value period = 7;
  }

  message FilterLogEvents {
    google.protobuf.StringValue region = 1;
    google.protobuf.StringValue log_group_name = 2;
    google.protobuf.StringValue filter_query = 3;
  }
  message RdsGetSqlQueryPerformanceStats {
    google.protobuf.StringValue db_resource_uri = 1;
  }

  message FetchDashboard {
    google.protobuf.StringValue dashboard_name = 1;
    google.protobuf.Int32Value step = 2;
  }

  message FetchS3File {
    google.protobuf.StringValue bucket_name = 1;
    google.protobuf.StringValue object_key = 2;
  }

  message CostAnalysis {
    google.protobuf.StringValue start_date = 1;
    google.protobuf.StringValue end_date = 2;
    google.protobuf.StringValue group_by_dimension = 3;
    google.protobuf.StringValue group_by_tag_key = 4;
    google.protobuf.StringValue filter_dimension = 5;
    repeated string filter_values = 6;
    google.protobuf.StringValue filter_tag_key = 7;
    repeated string filter_tag_values = 8;
    google.protobuf.StringValue granularity = 9;
    repeated string metrics = 10;
  }

  message DiscoverDimensions {
    google.protobuf.StringValue start_date = 1;
    google.protobuf.StringValue end_date = 2;
    repeated string dimensions_to_check = 3;
    google.protobuf.Int32Value max_values_per_dimension = 4;
    google.protobuf.DoubleValue min_cost_threshold = 5;
    google.protobuf.BoolValue include_tags = 6;
    google.protobuf.BoolValue sample_only = 7;
    repeated string filter_by_service = 8;
    repeated string region_filter = 9;
  }


  enum TaskType {
    UNKNOWN = 0;
    METRIC_EXECUTION = 1;
    FILTER_LOG_EVENTS = 2;
    RDS_GET_SQL_QUERY_PERFORMANCE_STATS = 3;
    ECS_LIST_CLUSTERS = 4;
    ECS_LIST_TASKS = 5;
    ECS_GET_TASK_LOGS = 6;
    FETCH_DASHBOARD = 7;
    FETCH_S3_FILE = 8;
    COST_ANALYSIS = 9;
    DISCOVER_DIMENSIONS = 10;
  }

  TaskType type = 1;
  oneof task {
    MetricExecution metric_execution = 2;
    FilterLogEvents filter_log_events = 3;
    RdsGetSqlQueryPerformanceStats rds_get_sql_query_performance_stats = 4;
    EcsListClusters ecs_list_clusters = 5;
    EcsListTasks ecs_list_tasks = 6;
    EcsGetTaskLogs ecs_get_task_logs = 7;
    FetchDashboard fetch_dashboard = 8;
    FetchS3File fetch_s3_file = 9;
    CostAnalysis cost_analysis = 10;
    DiscoverDimensions discover_dimensions = 11;
  }
}